# invest_dojo

./: .pre-commit-config.yaml  CONTRIBUTING.md  InvestDojo_技术架构方案.md  investdojo-overview.html  investdojo-pitch-bold.html  investdojo-pitch-botanical.html  investdojo-pitch-swiss.html  investdojo-pitch.html  investdojo-v2-prototype.html
.workbuddy/: settings.local.json
docs/: README.md
investdojo/: .gitignore  (+4 more)
investdojo/python-services/: .env.example  .gitignore  Makefile  Procfile  README.md  pyproject.toml
investdojo/python-services/.task_history/backfill_factors/: 2026-05-17T13-12-00.274518Z.json
investdojo/python-services/.task_history/seed_symbols/: 2026-05-17T12-07-32.625009Z.json
investdojo/python-services/backtest-svc/: __init__.py  common_utils.py  main.py  mock_engine.py
investdojo/python-services/common/: __init__.py  app.py  as_of_enforcer.py  celery_app.py  config.py  logging.py  minio_client.py  redis_client.py  supabase_client.py
investdojo/python-services/data-svc/: __init__.py  common_utils.py  main.py
investdojo/python-services/data-svc/routers/: __init__.py  admin.py  fundamentals.py  klines.py  market_snapshots.py  news.py  scenarios.py  symbols.py
investdojo/python-services/feature-svc/: __init__.py  common_utils.py  main.py
investdojo/python-services/feature-svc/factors/: __init__.py  ast_nodes.py  batch_compute.py  builtin_loader.py  dsl_parser.py  engine.py  panel_loader.py  registry.py
investdojo/python-services/feature-svc/factors/builtin/: growth.yaml  sentiment.yaml  technical.yaml  valuation.yaml
investdojo/python-services/feature-svc/routers/: __init__.py  factors.py
investdojo/python-services/infer-svc/: __init__.py  common_utils.py  main.py  mock_model.py
investdojo/python-services/monitor-svc/: __init__.py  common_utils.py  main.py
investdojo/python-services/scripts/: smoke.sh
investdojo/python-services/tests/: __init__.py  test_as_of_enforcer.py  test_backtest_svc.py  test_batch_compute.py  test_builtin_factors.py  test_common.py  test_data_svc.py  test_dsl_parser.py  test_engine.py  test_factor_crud.py  test_feature_svc.py  test_infer_svc.py  test_monitor_svc.py  test_supabase.py  test_train_svc.py
investdojo/python-services/train-svc/: __init__.py  celery_worker.py  common_utils.py  feature_tasks.py  main.py  tasks.py
(+150 files in other folders)
