[project]
name = "investdojo-services"
version = "0.1.0"
description = "InvestDojo Python 微服务集群"
requires-python = ">=3.11,<3.14"
readme = "README.md"

dependencies = [
  # Web 框架
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  # 数据层
  "supabase>=2.9.0",              # Supabase Python SDK
  "redis[hiredis]>=5.2.0",         # Redis 客户端
  "minio>=7.2.0",                  # MinIO SDK
  # 任务队列
  "celery[redis]>=5.4.0",
  "flower>=2.0.1",                 # Celery 监控（可选）
  # 数据处理（算法服务用）
  "pandas>=2.2.0",
  "numpy>=2.0.0",
  "polars>=1.12.0",
  # ML（训练和推理用）
  "scikit-learn>=1.5.0",
  "lightgbm>=4.5.0",
  "xgboost>=2.1.0",
  # torch 暂不装（体积大，后续 train-svc 需要时再加）
  # 数据源
  "akshare>=1.18.0",
  "baostock>=0.8.90",
  "requests>=2.32.0",
  # 日志/观测
  "structlog>=24.4.0",
  "prometheus-client>=0.21.0",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  # 工具
  "httpx>=0.27.0",
  "python-dateutil>=2.9.0",
  "pyyaml>=6.0.0",
  "orjson>=3.10.0",                # 快 JSON
  "psycopg2-binary>=2.9.12",
  "tushare>=1.4.29",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",                 # 用于测试
  "ruff>=0.7.0",                   # lint + format
  "mypy>=1.13.0",
  "ipython>=8.28.0",
]

# ── uv 工作区配置 ──
[tool.uv]
package = false                    # 不做成 wheel，直接源码跑

# ── ruff 配置 ──
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501"]                  # 行长由 formatter 处理

[tool.ruff.lint.per-file-ignores]
# 服务目录名带连字符是约定（feature-svc / train-svc 等），不是 Python 模块名规范
"*-svc/*.py" = [
  "N999",   # 模块名（连字符目录）
  "B008",   # FastAPI 惯用：Depends / Query 写在参数默认值
  "N806",   # 变量名大小写（有时需要用 `Symbol` 等业务术语）
]
"*-svc/routers/*.py" = [
  "N999",
  "B008",
  "N806",
]
# 测试里 pytest.raises(Exception) 是常规用法
"tests/*.py" = [
  "B008",
  "B017",   # pytest.raises(Exception) 过于宽泛
]

# ── pytest ──
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
  "integration: 需要真实外部服务（Supabase/Redis/MinIO）",
  "unit: 纯单元测试，不依赖外部",
]
